# serah-local-assistant

./: CHANGELOG.md  CONTRIBUTING.md  Clean up Serah project README  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
PUBLIC_EXPORT/serah-local-assistant/: README.md
PUBLIC_EXPORT/serah-local-assistant/assets/: README.md
PUBLIC_EXPORT/serah-local-assistant/docs/: opportunity-engine-overview.md  proof-log.md  serah-architecture.md  trading-safety-harness-case-study.md
assets/: README.md
docs/: opportunity-engine-overview.md  proof-log.md  serah-architecture.md  trading-safety-harness-case-study.md
examples/: README.md  invalid_alert.json  operator_report.txt  review_packet.md  synthetic_alert.json  valid_packet.json
src/serah_demo/: __init__.py  __main__.py  demo.py  main.py  models.py  packet_builder.py  report_builder.py  validator.py
tests/: test_demo.py
