[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "serah-demo"
version = "1.0.0"
description = "Public demonstration package for the Serah evidence-packet pipeline. Uses synthetic data only. No brokerage connection, no real market data, no order capability."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
serah-demo = "serah_demo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/serah_demo"]
omit = ["tests/*"]
